Updated department controller and swagger.json: reformatted swagger annotations, updated update method, moved swagger annotations, and added new swagger definition for personnels endpoint
